cfn_benchmark/cfn_templates/LeNgocBao145__patient-management-system-microservices/infrastructure/cdk.out/localstack.template.json
{
  "Resources": {
    "PatientManagementVpcF1F9209A": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "PatientManagementVpc"
          }
        ]
      }
    },
    "PatientManagementVpcPublicSubnet1Subnet32B9FD34": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PublicSubnet1"
          }
        ]
      }
    },
    "PatientManagementVpcPublicSubnet1RouteTableA6B004E5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PublicSubnet1"
          }
        ]
      }
    },
    "PatientManagementVpcPublicSubnet1RouteTableAssociationB803908F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PatientManagementVpcPublicSubnet1RouteTableA6B004E5"
        },
        "SubnetId": {
          "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
        }
      }
    },
    "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PatientManagementVpcPublicSubnet1RouteTableA6B004E5"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "PatientManagementVpcIGW6E5E564D"
        }
      },
      "DependsOn": [
        "PatientManagementVpcVPCGW05B0D621"
      ]
    },
    "PatientManagementVpcPublicSubnet1EIP57CBC205": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PublicSubnet1"
          }
        ]
      }
    },
    "PatientManagementVpcPublicSubnet1NATGatewayB6BB180F": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "PatientManagementVpcPublicSubnet1EIP57CBC205",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PublicSubnet1"
          }
        ]
      }
    },
    "PatientManagementVpcPublicSubnet2Subnet301A18D3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PublicSubnet2"
          }
        ]
      }
    },
    "PatientManagementVpcPublicSubnet2RouteTable8FB51550": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PublicSubnet2"
          }
        ]
      }
    },
    "PatientManagementVpcPublicSubnet2RouteTableAssociationC6F51BA2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PatientManagementVpcPublicSubnet2RouteTable8FB51550"
        },
        "SubnetId": {
          "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
        }
      }
    },
    "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PatientManagementVpcPublicSubnet2RouteTable8FB51550"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "PatientManagementVpcIGW6E5E564D"
        }
      },
      "DependsOn": [
        "PatientManagementVpcVPCGW05B0D621"
      ]
    },
    "PatientManagementVpcPublicSubnet2EIP7F7E2B9F": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PublicSubnet2"
          }
        ]
      }
    },
    "PatientManagementVpcPublicSubnet2NATGatewayEFB106BB": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "PatientManagementVpcPublicSubnet2EIP7F7E2B9F",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PublicSubnet2"
          }
        ]
      }
    },
    "PatientManagementVpcPrivateSubnet1SubnetBDF7E702": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PrivateSubnet1"
          }
        ]
      }
    },
    "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PrivateSubnet1"
          }
        ]
      }
    },
    "PatientManagementVpcPrivateSubnet1RouteTableAssociation4B6E1CD5": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD"
        },
        "SubnetId": {
          "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
        }
      }
    },
    "PatientManagementVpcPrivateSubnet1DefaultRouteFABE5400": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "PatientManagementVpcPublicSubnet1NATGatewayB6BB180F"
        }
      }
    },
    "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PrivateSubnet2"
          }
        ]
      }
    },
    "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "localstack/PatientManagementVpc/PrivateSubnet2"
          }
        ]
      }
    },
    "PatientManagementVpcPrivateSubnet2RouteTableAssociation1AA2E279": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13"
        },
        "SubnetId": {
          "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
        }
      }
    },
    "PatientManagementVpcPrivateSubnet2DefaultRouteB1A67D2B": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "PatientManagementVpcPublicSubnet2NATGatewayEFB106BB"
        }
      }
    },
    "PatientManagementVpcIGW6E5E564D": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "PatientManagementVpc"
          }
        ]
      }
    },
    "PatientManagementVpcVPCGW05B0D621": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        },
        "InternetGatewayId": {
          "Ref": "PatientManagementVpcIGW6E5E564D"
        }
      }
    },
    "PatientServiceDbSubnetGroup1312FFB6": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for PatientServiceDb database",
        "SubnetIds": [
          {
            "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
          },
          {
            "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
          }
        ]
      }
    },
    "PatientServiceDbSecurityGroupCEB42CD9": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for PatientServiceDb database",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        }
      }
    },
    "localstackPatientServiceDbSecretE29F42EC3fdaad7efa858a3daf9490cf0a702aeb": {
      "Type": "AWS::SecretsManager::Secret",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName"
              }
            ]
          ]
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{\"username\":\"admin_user\"}"
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "PatientServiceDbSecretAttachment54460532": {
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
      "Properties": {
        "SecretId": {
          "Ref": "localstackPatientServiceDbSecretE29F42EC3fdaad7efa858a3daf9490cf0a702aeb"
        },
        "TargetId": {
          "Ref": "PatientServiceDb4C436D31"
        },
        "TargetType": "AWS::RDS::DBInstance"
      }
    },
    "PatientServiceDb4C436D31": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "DBInstanceClass": "db.t2.micro",
        "AllocatedStorage": "20",
        "CopyTagsToSnapshot": true,
        "DBName": "patient-service-db",
        "DBSubnetGroupName": {
          "Ref": "PatientServiceDbSubnetGroup1312FFB6"
        },
        "Engine": "postgres",
        "EngineVersion": "14.1",
        "MasterUsername": "admin_user",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "localstackPatientServiceDbSecretE29F42EC3fdaad7efa858a3daf9490cf0a702aeb"
              },
              ":SecretString:password::}}"
            ]
          ]
        },
        "StorageType": "gp2",
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "PatientServiceDbSecurityGroupCEB42CD9",
              "GroupId"
            ]
          }
        ]
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "PatientServiceDbHealthCheck": {
      "Type": "AWS::Route53::HealthCheck",
      "Properties": {
        "HealthCheckConfig": {
          "FailureThreshold": 3,
          "IPAddress": {
            "Fn::GetAtt": [
              "PatientServiceDb4C436D31",
              "Endpoint.Address"
            ]
          },
          "Port": {
            "Fn::GetAtt": [
              "PatientServiceDb4C436D31",
              "Endpoint.Port"
            ]
          },
          "RequestInterval": 30,
          "Type": "TCP"
        }
      }
    },
    "AuthServiceDbSubnetGroup12237DD0": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for AuthServiceDb database",
        "SubnetIds": [
          {
            "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
          },
          {
            "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
          }
        ]
      }
    },
    "AuthServiceDbSecurityGroup4A0F0427": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for AuthServiceDb database",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        }
      }
    },
    "localstackAuthServiceDbSecretBE08D4303fdaad7efa858a3daf9490cf0a702aeb": {
      "Type": "AWS::SecretsManager::Secret",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName"
              }
            ]
          ]
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{\"username\":\"admin_user\"}"
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "AuthServiceDbSecretAttachment4C4A1911": {
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
      "Properties": {
        "SecretId": {
          "Ref": "localstackAuthServiceDbSecretBE08D4303fdaad7efa858a3daf9490cf0a702aeb"
        },
        "TargetId": {
          "Ref": "AuthServiceDb4EA10E77"
        },
        "TargetType": "AWS::RDS::DBInstance"
      }
    },
    "AuthServiceDb4EA10E77": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "DBInstanceClass": "db.t2.micro",
        "AllocatedStorage": "20",
        "CopyTagsToSnapshot": true,
        "DBName": "auth-service-db",
        "DBSubnetGroupName": {
          "Ref": "AuthServiceDbSubnetGroup12237DD0"
        },
        "Engine": "postgres",
        "EngineVersion": "14.1",
        "MasterUsername": "admin_user",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "localstackAuthServiceDbSecretBE08D4303fdaad7efa858a3daf9490cf0a702aeb"
              },
              ":SecretString:password::}}"
            ]
          ]
        },
        "StorageType": "gp2",
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "AuthServiceDbSecurityGroup4A0F0427",
              "GroupId"
            ]
          }
        ]
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "AuthServiceDbHealthCheck": {
      "Type": "AWS::Route53::HealthCheck",
      "Properties": {
        "HealthCheckConfig": {
          "FailureThreshold": 3,
          "IPAddress": {
            "Fn::GetAtt": [
              "AuthServiceDb4EA10E77",
              "Endpoint.Address"
            ]
          },
          "Port": {
            "Fn::GetAtt": [
              "AuthServiceDb4EA10E77",
              "Endpoint.Port"
            ]
          },
          "RequestInterval": 30,
          "Type": "TCP"
        }
      }
    },
    "MskCluster": {
      "Type": "AWS::MSK::Cluster",
      "Properties": {
        "BrokerNodeGroupInfo": {
          "BrokerAZDistribution": "DEFAULT",
          "ClientSubnets": [
            {
              "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
            },
            {
              "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
            }
          ],
          "InstanceType": "kafka.t3.small"
        },
        "ClusterName": "kafka-cluster",
        "KafkaVersion": "3.6.0",
        "NumberOfBrokerNodes": 2
      }
    },
    "EcsCluster97242B84": {
      "Type": "AWS::ECS::Cluster",
      "Properties": {
        "ClusterName": "PatientManagementEcsCluster"
      }
    },
    "EcsClusterDefaultServiceDiscoveryNamespaceB0971B2F": {
      "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
      "Properties": {
        "Name": "patient-management.local",
        "Vpc": {
          "Ref": "PatientManagementVpcF1F9209A"
        }
      }
    },
    "AuthServiceTaskTaskRoleE466B974": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "AuthServiceTask82E6680D": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "SPRING_SQL_INIT_MODE",
                "Value": "always"
              },
              {
                "Name": "JWT_SECRET",
                "Value": "EvSbKW4WueRIFf46NmZo/WRxTMMFMe1fhokkaMyRyas="
              },
              {
                "Name": "SPRING_DATASOURCE_URL",
                "Value": {
                  "Fn::Join": [
                    "",
                    [
                      "jdbc:postgresql://",
                      {
                        "Fn::GetAtt": [
                          "AuthServiceDb4EA10E77",
                          "Endpoint.Address"
                        ]
                      },
                      ":",
                      {
                        "Fn::GetAtt": [
                          "AuthServiceDb4EA10E77",
                          "Endpoint.Port"
                        ]
                      },
                      "/auth-service-db"
                    ]
                  ]
                }
              },
              {
                "Name": "SPRING_DATASOURCE_PASSWORD",
                "Value": {
                  "Fn::Join": [
                    "",
                    [
                      "{{resolve:secretsmanager:",
                      {
                        "Ref": "AuthServiceDbSecretAttachment4C4A1911"
                      },
                      ":SecretString:password::}}"
                    ]
                  ]
                }
              },
              {
                "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
                "Value": "update"
              },
              {
                "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
                "Value": "60000"
              },
              {
                "Name": "SPRING_DATASOURCE_USERNAME",
                "Value": "admin_user"
              },
              {
                "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
                "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
              }
            ],
            "Essential": true,
            "Image": "auth-service",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "AuthServiceLogGroup34125B38"
                },
                "awslogs-stream-prefix": "auth-service",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Name": "auth-service",
            "PortMappings": [
              {
                "ContainerPort": 4005,
                "HostPort": 4005,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "AuthServiceTaskExecutionRoleA1258495",
            "Arn"
          ]
        },
        "Family": "localstackAuthServiceTask4114E6CA",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "AuthServiceTaskTaskRoleE466B974",
            "Arn"
          ]
        }
      }
    },
    "AuthServiceTaskExecutionRoleA1258495": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "AuthServiceTaskExecutionRoleDefaultPolicyF20AD0D3": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "AuthServiceLogGroup34125B38",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "AuthServiceTaskExecutionRoleDefaultPolicyF20AD0D3",
        "Roles": [
          {
            "Ref": "AuthServiceTaskExecutionRoleA1258495"
          }
        ]
      }
    },
    "AuthServiceLogGroup34125B38": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "LogGroupName": "/ecs/auth-service",
        "RetentionInDays": 1
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "AuthService3C2B741A": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "EcsCluster97242B84"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "EnableECSManagedTags": false,
        "LaunchType": "FARGATE",
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "AuthServiceSecurityGroup67F2FA7D",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
              },
              {
                "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
              }
            ]
          }
        },
        "ServiceName": "auth-service",
        "TaskDefinition": {
          "Ref": "AuthServiceTask82E6680D"
        }
      },
      "DependsOn": [
        "AuthServiceDb4EA10E77",
        "AuthServiceDbSecretAttachment4C4A1911",
        "localstackAuthServiceDbSecretBE08D4303fdaad7efa858a3daf9490cf0a702aeb",
        "AuthServiceDbSecurityGroup4A0F0427",
        "AuthServiceDbSubnetGroup12237DD0",
        "AuthServiceDbHealthCheck"
      ]
    },
    "AuthServiceSecurityGroup67F2FA7D": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "localstack/AuthService/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        }
      },
      "DependsOn": [
        "AuthServiceDb4EA10E77",
        "AuthServiceDbSecretAttachment4C4A1911",
        "localstackAuthServiceDbSecretBE08D4303fdaad7efa858a3daf9490cf0a702aeb",
        "AuthServiceDbSecurityGroup4A0F0427",
        "AuthServiceDbSubnetGroup12237DD0",
        "AuthServiceDbHealthCheck"
      ]
    },
    "BillingServiceTaskTaskRole7A547BBF": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "BillingServiceTask30D9C66E": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
                "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
              }
            ],
            "Essential": true,
            "Image": "billing-service",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "BillingServiceLogGroupDD61E740"
                },
                "awslogs-stream-prefix": "billing-service",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Name": "billing-service",
            "PortMappings": [
              {
                "ContainerPort": 4001,
                "HostPort": 4001,
                "Protocol": "tcp"
              },
              {
                "ContainerPort": 9001,
                "HostPort": 9001,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "BillingServiceTaskExecutionRole11FE8DE2",
            "Arn"
          ]
        },
        "Family": "localstackBillingServiceTaskAB0446C6",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "BillingServiceTaskTaskRole7A547BBF",
            "Arn"
          ]
        }
      }
    },
    "BillingServiceTaskExecutionRole11FE8DE2": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "BillingServiceTaskExecutionRoleDefaultPolicy4F4033C9": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "BillingServiceLogGroupDD61E740",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "BillingServiceTaskExecutionRoleDefaultPolicy4F4033C9",
        "Roles": [
          {
            "Ref": "BillingServiceTaskExecutionRole11FE8DE2"
          }
        ]
      }
    },
    "BillingServiceLogGroupDD61E740": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "LogGroupName": "/ecs/billing-service",
        "RetentionInDays": 1
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "BillingServiceFEB36D90": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "EcsCluster97242B84"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "EnableECSManagedTags": false,
        "LaunchType": "FARGATE",
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "BillingServiceSecurityGroup3783AD35",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
              },
              {
                "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
              }
            ]
          }
        },
        "ServiceName": "billing-service",
        "TaskDefinition": {
          "Ref": "BillingServiceTask30D9C66E"
        }
      }
    },
    "BillingServiceSecurityGroup3783AD35": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "localstack/BillingService/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        }
      }
    },
    "AnalyticsServiceTaskTaskRole1ABB10CB": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "AnalyticsServiceTaskC3AFBC47": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
                "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
              }
            ],
            "Essential": true,
            "Image": "analytics-service",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "AnalyticsServiceLogGroupBD82F12A"
                },
                "awslogs-stream-prefix": "analytics-service",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Name": "analytics-service",
            "PortMappings": [
              {
                "ContainerPort": 4002,
                "HostPort": 4002,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "AnalyticsServiceTaskExecutionRoleBAF654B2",
            "Arn"
          ]
        },
        "Family": "localstackAnalyticsServiceTask353A5B10",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "AnalyticsServiceTaskTaskRole1ABB10CB",
            "Arn"
          ]
        }
      }
    },
    "AnalyticsServiceTaskExecutionRoleBAF654B2": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "AnalyticsServiceTaskExecutionRoleDefaultPolicy99868928": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "AnalyticsServiceLogGroupBD82F12A",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "AnalyticsServiceTaskExecutionRoleDefaultPolicy99868928",
        "Roles": [
          {
            "Ref": "AnalyticsServiceTaskExecutionRoleBAF654B2"
          }
        ]
      }
    },
    "AnalyticsServiceLogGroupBD82F12A": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "LogGroupName": "/ecs/analytics-service",
        "RetentionInDays": 1
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "AnalyticsServiceCD38C492": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "EcsCluster97242B84"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "EnableECSManagedTags": false,
        "LaunchType": "FARGATE",
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "AnalyticsServiceSecurityGroupBA6AE98A",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
              },
              {
                "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
              }
            ]
          }
        },
        "ServiceName": "analytics-service",
        "TaskDefinition": {
          "Ref": "AnalyticsServiceTaskC3AFBC47"
        }
      },
      "DependsOn": [
        "MskCluster"
      ]
    },
    "AnalyticsServiceSecurityGroupBA6AE98A": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "localstack/AnalyticsService/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        }
      },
      "DependsOn": [
        "MskCluster"
      ]
    },
    "PatientServiceTaskTaskRole4FB5B4E2": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "PatientServiceTaskF865B565": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "BILLING_SERVICE_GRPC_PORT",
                "Value": "9001"
              },
              {
                "Name": "SPRING_SQL_INIT_MODE",
                "Value": "always"
              },
              {
                "Name": "SPRING_DATASOURCE_URL",
                "Value": {
                  "Fn::Join": [
                    "",
                    [
                      "jdbc:postgresql://",
                      {
                        "Fn::GetAtt": [
                          "PatientServiceDb4C436D31",
                          "Endpoint.Address"
                        ]
                      },
                      ":",
                      {
                        "Fn::GetAtt": [
                          "PatientServiceDb4C436D31",
                          "Endpoint.Port"
                        ]
                      },
                      "/patient-service-db"
                    ]
                  ]
                }
              },
              {
                "Name": "SPRING_DATASOURCE_PASSWORD",
                "Value": {
                  "Fn::Join": [
                    "",
                    [
                      "{{resolve:secretsmanager:",
                      {
                        "Ref": "PatientServiceDbSecretAttachment54460532"
                      },
                      ":SecretString:password::}}"
                    ]
                  ]
                }
              },
              {
                "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
                "Value": "update"
              },
              {
                "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
                "Value": "60000"
              },
              {
                "Name": "SPRING_DATASOURCE_USERNAME",
                "Value": "admin_user"
              },
              {
                "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
                "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
              },
              {
                "Name": "BILLING_SERVICE_ADDRESS",
                "Value": "host.docker.internal"
              }
            ],
            "Essential": true,
            "Image": "patient-service",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "PatientServiceLogGroup4A5C3809"
                },
                "awslogs-stream-prefix": "patient-service",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Name": "patient-service",
            "PortMappings": [
              {
                "ContainerPort": 4000,
                "HostPort": 4000,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "PatientServiceTaskExecutionRole3782903B",
            "Arn"
          ]
        },
        "Family": "localstackPatientServiceTask2770C053",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "PatientServiceTaskTaskRole4FB5B4E2",
            "Arn"
          ]
        }
      }
    },
    "PatientServiceTaskExecutionRole3782903B": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "PatientServiceTaskExecutionRoleDefaultPolicy3866E91E": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PatientServiceLogGroup4A5C3809",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "PatientServiceTaskExecutionRoleDefaultPolicy3866E91E",
        "Roles": [
          {
            "Ref": "PatientServiceTaskExecutionRole3782903B"
          }
        ]
      }
    },
    "PatientServiceLogGroup4A5C3809": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "LogGroupName": "/ecs/patient-service",
        "RetentionInDays": 1
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "PatientServiceA65AB800": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "EcsCluster97242B84"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "EnableECSManagedTags": false,
        "LaunchType": "FARGATE",
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "PatientServiceSecurityGroup547BE1F2",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
              },
              {
                "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
              }
            ]
          }
        },
        "ServiceName": "patient-service",
        "TaskDefinition": {
          "Ref": "PatientServiceTaskF865B565"
        }
      },
      "DependsOn": [
        "BillingServiceSecurityGroup3783AD35",
        "BillingServiceFEB36D90",
        "PatientServiceDb4C436D31",
        "PatientServiceDbSecretAttachment54460532",
        "localstackPatientServiceDbSecretE29F42EC3fdaad7efa858a3daf9490cf0a702aeb",
        "PatientServiceDbSecurityGroupCEB42CD9",
        "PatientServiceDbSubnetGroup1312FFB6",
        "PatientServiceDbHealthCheck"
      ]
    },
    "PatientServiceSecurityGroup547BE1F2": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "localstack/PatientService/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        }
      },
      "DependsOn": [
        "BillingServiceSecurityGroup3783AD35",
        "BillingServiceFEB36D90",
        "PatientServiceDb4C436D31",
        "PatientServiceDbSecretAttachment54460532",
        "localstackPatientServiceDbSecretE29F42EC3fdaad7efa858a3daf9490cf0a702aeb",
        "PatientServiceDbSecurityGroupCEB42CD9",
        "PatientServiceDbSubnetGroup1312FFB6",
        "PatientServiceDbHealthCheck"
      ]
    },
    "ApiGatewayTaskTaskRole067DCD80": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "ApiGatewayTask3752F926": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "SPRING_PROFILES_ACTIVE",
                "Value": "prod"
              },
              {
                "Name": "AUTH_SERVICE_URL",
                "Value": "http://host.docker.internal:4005"
              }
            ],
            "Essential": true,
            "Image": "api-gateway",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "ApiGatewayLogGroupA9770429"
                },
                "awslogs-stream-prefix": "api-gateway",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Name": "api-gateway",
            "PortMappings": [
              {
                "ContainerPort": 4005,
                "HostPort": 4005,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "ApiGatewayTaskExecutionRoleEFC2C1CC",
            "Arn"
          ]
        },
        "Family": "localstackApiGatewayTask50AB2DC7",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "ApiGatewayTaskTaskRole067DCD80",
            "Arn"
          ]
        }
      }
    },
    "ApiGatewayTaskExecutionRoleEFC2C1CC": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "ApiGatewayTaskExecutionRoleDefaultPolicy7DA205A3": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ApiGatewayLogGroupA9770429",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ApiGatewayTaskExecutionRoleDefaultPolicy7DA205A3",
        "Roles": [
          {
            "Ref": "ApiGatewayTaskExecutionRoleEFC2C1CC"
          }
        ]
      }
    },
    "ApiGatewayLogGroupA9770429": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "LogGroupName": "/ecs/api-gateway",
        "RetentionInDays": 1
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "ApiGatewayLB314A71CA": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          }
        ],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "ApiGatewayLBSecurityGroupFC9EF786",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
          },
          {
            "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
          }
        ],
        "Type": "application"
      },
      "DependsOn": [
        "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7",
        "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB"
      ]
    },
    "ApiGatewayLBSecurityGroupFC9EF786": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB localstackApiGatewayLBAC699808",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        }
      }
    },
    "ApiGatewayLBSecurityGrouptolocalstackApiGatewayServiceSecurityGroup9A13EB264005801FEA5A": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "ApiGatewayLBSecurityGroupFC9EF786",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "ApiGatewayServiceSecurityGroup823D138F",
            "GroupId"
          ]
        },
        "FromPort": 4005,
        "ToPort": 4005
      }
    },
    "ApiGatewayLBPublicListener1F579CF9": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "ApiGatewayLBPublicListenerECSGroup3781984F"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "ApiGatewayLB314A71CA"
        },
        "Port": 80,
        "Protocol": "HTTP"
      }
    },
    "ApiGatewayLBPublicListenerECSGroup3781984F": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [
          {
            "Key": "stickiness.enabled",
            "Value": "false"
          }
        ],
        "TargetType": "ip",
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        }
      }
    },
    "ApiGatewayService5F7AB479": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "EcsCluster97242B84"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "api-gateway",
            "ContainerPort": 4005,
            "TargetGroupArn": {
              "Ref": "ApiGatewayLBPublicListenerECSGroup3781984F"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "ApiGatewayServiceSecurityGroup823D138F",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
              },
              {
                "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
              }
            ]
          }
        },
        "ServiceName": "api-gateway",
        "TaskDefinition": {
          "Ref": "ApiGatewayTask3752F926"
        }
      },
      "DependsOn": [
        "ApiGatewayLBPublicListenerECSGroup3781984F",
        "ApiGatewayLBPublicListener1F579CF9"
      ]
    },
    "ApiGatewayServiceSecurityGroup823D138F": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "localstack/ApiGateway/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "PatientManagementVpcF1F9209A"
        }
      }
    },
    "ApiGatewayServiceSecurityGroupfromlocalstackApiGatewayLBSecurityGroupB6671E724005F407F10B": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 4005,
        "GroupId": {
          "Fn::GetAtt": [
            "ApiGatewayServiceSecurityGroup823D138F",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "ApiGatewayLBSecurityGroupFC9EF786",
            "GroupId"
          ]
        },
        "ToPort": 4005
      }
    }
  },
  "Outputs": {
    "ApiGatewayLoadBalancerDNSF96F5FA1": {
      "Value": {
        "Fn::GetAtt": [
          "ApiGatewayLB314A71CA",
          "DNSName"
        ]
      }
    },
    "ApiGatewayServiceURL53AE91CC": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "ApiGatewayLB314A71CA",
                "DNSName"
              ]
            }
          ]
        ]
      }
    }
  }
}
